@@ -5,7 +5,7 @@ import java.time.LocalDateTime
 plugins {
     id 'application'
     id 'maven-publish'
-    id 'edu.sc.seis.launch4j' version '2.5.3'
+    id 'edu.sc.seis.launch4j' version '2.5.4'
     id 'jacoco'
 }
 
@@ -31,37 +31,42 @@ sourceSets {
 dependencies {
     implementation "org.megamek:megamek${mmBranchTag}:${version}"
     implementation ("org.megamek:megameklab${mmlBranchTag}:${version}") {
-        // We may want to specify different branches for MM and MML, so we need to exclude
-        // the transitive MM dependency
+        // We may want to specify different branches for MM and MML, so we need to exclude the
+        // transitive MM dependency
         exclude group: 'org.megamek', module: "megameklab${mmlBranchTag}"
         // We don't need the python and javascript engine taking up space
         exclude group: 'org.python', module: 'jython'
         exclude group: 'org.mozilla', module: 'rhino'
+        // Eclipse IDE Multiple Dependency errors. 
+        exclude group: 'xml-apis'
     }
 
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
     implementation 'javax.vecmath:vecmath:1.5.2'
-    implementation 'joda-time:joda-time:2.10.14'
-    implementation 'org.apache.commons:commons-csv:1.9.0'
+    implementation 'joda-time:joda-time:2.12.5'
+    implementation 'org.apache.commons:commons-csv:1.10.0'
     implementation 'org.apache.commons:commons-math3:3.6.1'
-    implementation 'org.apache.commons:commons-text:1.9'
-    implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
-    implementation 'org.commonmark:commonmark:0.19.0'
-    implementation 'org.jfree:jfreechart:1.5.3'
-    implementation 'org.joda:joda-money:1.0.1'
+    implementation 'org.apache.commons:commons-text:1.10.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+    implementation 'org.commonmark:commonmark:0.21.0'
+    implementation 'org.jfree:jfreechart:1.5.4'
+    implementation 'org.joda:joda-money:1.0.3'
 
-    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:4.0.0'
-
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    testImplementation 'org.mockito:mockito-core:4.6.1'
+    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:4.0.2'
+    // Required for mml printing scaled vector graphics (SVG) - Eclipse IDE Compatability.
+    runtimeOnly 'xml-apis:xml-apis-ext:1.3.04'
+    
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    testImplementation 'org.mockito:mockito-core:5.2.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
 }
 
 mainClassName = 'mekhq.MekHQ'
 
 ext {
-    mmJvmOptions = ['-Xmx2048m']
+    mmJvmOptions = ['-Xmx2048m', '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED']
     mmlJvmOptions = ['-Xmx1024m']
-    mhqJvmOptions = ['-Xmx2048m']
+    mhqJvmOptions = ['-Xmx2048m', '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED']
     campaigns = 'campaigns'
     data = 'data'
     docs = 'docs'
@@ -80,10 +85,13 @@ ext {
     scriptTemplate = "${scriptsDir}/startScriptTemplate.txt"
 }
 
+run {
+    jvmArgs = mhqJvmOptions
+}
+
 task compileMM (type: GradleBuild) {
     description = 'Compiles the MM directory for packaging in a Jar'
 
-    buildFile = "${mmDir}/build.gradle"
     buildName = "mhq-compile-mm"
     dir = "${mmDir}"
     tasks = [ 'compileTestJava' ]
@@ -100,6 +108,7 @@ task mmJar (type: Jar, dependsOn: compileMM) {
         attributes "Class-Path" : project.sourceSets.main.runtimeClasspath.files
                 .findAll { it.name.endsWith(".jar") && !it.name.toLowerCase().startsWith("megamek") }
                 .collect { "${lib}/${it.name}" }.join(' ')
+        attributes "Add-Opens" : 'java.base/java.util java.base/java.util.concurrent'
         attributes "Build-Date" : LocalDateTime.now()
     }
     ext.jarLocation = "${buildDir}/libs/${archiveFileName.get()}"
@@ -119,6 +128,7 @@ task mmJarLibDir (type: Jar, dependsOn: compileMM) {
         attributes "Class-Path" : project.sourceSets.main.runtimeClasspath.files
                 .findAll { it.name.endsWith(".jar") && !it.name.toLowerCase().startsWith("megamek") }
                 .collect { it.name }.join(' ')
+        attributes "Add-Opens" : 'java.base/java.util java.base/java.util.concurrent'
         attributes "Build-Date" : LocalDateTime.now()
     }
     ext.jarLocation = "${buildDir}/libs/${archiveFileName.get()}"
@@ -130,7 +140,6 @@ task mmJarLibDir (type: Jar, dependsOn: compileMM) {
 task compileMML (type: GradleBuild) {
     description = 'Compiles the MML directory for packaging in a Jar'
 
-    buildFile = "${mmlDir}/build.gradle"
     buildName = "mhq-compile-mml"
     dir = "${mmlDir}"
     tasks = [ 'compileTestJava' ]
@@ -145,6 +154,7 @@ task mmlJar (type: Jar, dependsOn: compileMML) {
         attributes "Class-Path" : "${mmJar.archiveFileName.get()} " + (project.sourceSets.main.runtimeClasspath.files
             .findAll { it.name.endsWith(".jar") && !it.name.toLowerCase().startsWith("megamek")}
             .collect { "${lib}/${it.name}" }.join(' '))
+        attributes "Add-Opens" : 'java.base/java.util java.base/java.util.concurrent'
         attributes "Build-Date" : LocalDateTime.now()
     }
     ext.jarLocation = "${buildDir}/libs/${archiveFileName.get()}"
@@ -160,6 +170,7 @@ jar {
         attributes "Class-Path" : "${mmJar.archiveFileName.get()} ${mmlJar.archiveFileName.get()} " + (project.sourceSets.main.runtimeClasspath.files
             .findAll { it.name.endsWith(".jar") && !it.name.toLowerCase().startsWith("megamek") }
             .collect { "${lib}/${it.name}" }.join(' '))
+        attributes "Add-Opens" : 'java.base/java.util java.base/java.util.concurrent'
         attributes "Build-Date" : LocalDateTime.now()
     }
 }
@@ -176,11 +187,13 @@ task stageFiles(type: Copy) {
     include "${data}/images/awards/"
     include "${data}/images/force/"
     include "${data}/images/portraits/"
-    include "${data}/images/fluff/mech/*.png"
+    include "${data}/images/fluff/Mech/*.png"
     include "${data}/images/misc/"
+    include "${data}/images/stratcon/"
     include "${data}/images/universe/"
     include "${data}/scenariomodifiers/"
     include "${data}/scenariotemplates/"
+    include "${data}/stratconbiomedefinitions/"
     include "${data}/stratconcontractdefinitions/"
     include "${data}/stratconfacilities/"
     include "${docs}/**"
@@ -210,7 +223,7 @@ task stageFiles(type: Copy) {
 task createStartScripts (type: CreateStartScripts) {
     description = 'Create shell script for generic distribution.'
     applicationName = 'mhq'
-    mainClassName = project.mainClassName
+    mainClass = project.mainClassName
     outputDir = startScripts.outputDir
     classpath = jar.outputs.files + files(project.sourceSets.main.runtimeClasspath.files)
             .filter { it.name.endsWith(".jar") }
@@ -338,11 +351,11 @@ createExe {
     classpath = ["lib/${mmJar.archiveFileName.get()}", "lib/${mmlJar.archiveFileName.get()}"] + project.sourceSets.main.runtimeClasspath.files
             .findAll { it.name.endsWith(".jar") && !it.name.toLowerCase().startsWith("megamek")}
             .collect { "${lib}/${it.name}" }
-    def inifile = outfile.replace('.exe', '.l4j.ini')
+    def iniFile = outfile.replace('.exe', '.l4j.ini')
     outputs.file "${buildDir}/launch4j/${outfile}"
-    outputs.file "${buildDir}/launch4j/${inifile}"
+    outputs.file "${buildDir}/launch4j/${iniFile}"
     doLast {
-        new File("${buildDir}/${outputDir}/${inifile}").text = """# Launch4j runtime config
+        new File("${buildDir}/${outputDir}/${iniFile}").text = """# Launch4j runtime config
 # you can add arguments here that will be processed by the JVM at runtime
 ${project.ext.mhqJvmOptions.join('\n')}
 """
@@ -360,11 +373,11 @@ task createMMExe (type: Launch4jLibraryTask, dependsOn: mmJar) {
     icon = "${mmDir}/megamek/${data}/images/misc/megamek.ico"
     internalName = 'MegaMek'
     dontWrapJar = true
-    def inifile = outfile.replace('.exe', '.l4j.ini')
+    def iniFile = outfile.replace('.exe', '.l4j.ini')
     outputs.file "${buildDir}/launch4j/${outfile}"
-    outputs.file "${buildDir}/launch4j/${inifile}"
+    outputs.file "${buildDir}/launch4j/${iniFile}"
     doLast {
-        new File("${buildDir}/${outputDir}/${inifile}").text = """# Launch4j runtime config
+        new File("${buildDir}/${outputDir}/${iniFile}").text = """# Launch4j runtime config
 # you can add arguments here that will be processed by the JVM at runtime
 ${project.ext.mmJvmOptions.join('\n')}
 """
@@ -382,11 +395,11 @@ task createMMLExe (type: Launch4jLibraryTask, dependsOn: mmlJar) {
     icon = "${mmlDir}/megameklab/${data}/images/misc/megameklab.ico"
     internalName = 'MegaMekLab'
     dontWrapJar = true
-    def inifile = outfile.replace('.exe', '.l4j.ini')
+    def iniFile = outfile.replace('.exe', '.l4j.ini')
     outputs.file "${buildDir}/launch4j/${outfile}"
-    outputs.file "${buildDir}/launch4j/${inifile}"
+    outputs.file "${buildDir}/launch4j/${iniFile}"
     doLast {
-        new File("${buildDir}/${outputDir}/${inifile}").text = """# Launch4j runtime config
+        new File("${buildDir}/${outputDir}/${iniFile}").text = """# Launch4j runtime config
 # you can add arguments here that will be processed by the JVM at runtime
 ${project.ext.mmlJvmOptions.join('\n')}
 """
@@ -397,7 +410,6 @@ task stageMM (type: GradleBuild) {
     description = 'Prepares files from the MegaMek project'
     group = 'distribution'
 
-    buildFile = "${mmDir}/build.gradle"
     buildName = "mhq-stage-mm"
     dir = "${mmDir}"
     tasks = [ 'stageFiles', 'createStartScripts' ]
@@ -407,7 +419,6 @@ task stageMML (type: GradleBuild) {
     description = 'Prepares files from the MegaMekLab project'
     group = 'distribution'
 
-    buildFile = "${mmlDir}/build.gradle"
     buildName = "mhq-stage-mml"
     dir = "${mmlDir}"
     tasks = [ 'stageFiles', 'createStartScripts' ]
@@ -514,7 +525,6 @@ task buildFromRepo (type: GradleBuild) {
     dependsOn cloneMMLRepo
     dependsOn cloneMHQRepo
 
-    buildFile = "${mhqRepoDir}/build.gradle"
     buildName = "mhq-build-repo"
     dir = "${mhqRepoDir}"
     tasks = [ 'assembleDist' ]
@@ -533,7 +543,6 @@ task buildMM (type: GradleBuild, dependsOn: cloneMMRepo) {
     description = 'Prepares files from the MegaMek project'
     group = 'distribution'
 
-    buildFile = "${mmRepoDir}/build.gradle"
     buildName = "mhq-build-mm"
     dir = "${mmRepoDir}"
     tasks = [ 'assembleDist' ]
@@ -543,7 +552,6 @@ task buildMML (type: GradleBuild, dependsOn: cloneMMLRepo) {
     description = 'Prepares files from the MegaMekLab project'
     group = 'distribution'
 
-    buildFile = "${mmlRepoDir}/build.gradle"
     buildName = "mhq-build-mml"
     dir = "${mmlRepoDir}"
     tasks = [ 'assembleDist' ]
@@ -558,7 +566,6 @@ task buildAllFromRepo (type: GradleBuild) {
     dependsOn buildMM
     dependsOn buildMML
 
-    buildFile = "${mhqRepoDir}/build.gradle"
     buildName = "mhq-build-all-repo"
     dir = "${mhqRepoDir}"
     tasks = [ 'unixDistTar', 'windowsDistZip' ]
@@ -570,7 +577,7 @@ task releaseAll (type: Copy) {
     dependsOn buildAllFromRepo
 
     from "${mmRepoDir}/megamek/build/distributions"
-    from "${mmlRepoDir}/build/distributions"
+    from "${mmlRepoDir}/megameklab/build/distributions"
     from "${mhqRepoDir}/MekHQ/build/distributions"
     into "${distributionDir}"
 }
@@ -598,7 +605,7 @@ publishing {
             pom {
                 name = "MekHQ"
                 description = "MekHQ"
-                url = "http://megamek.org"
+                url = "https://megamek.org"
                 licenses {
                     license {
                         name = "GNU General Public License, version 3"
@@ -632,7 +639,7 @@ jacocoTestReport {
     // tests are required to run before generating the report
     dependsOn test
     reports {
-        xml.enabled true
-        html.enabled true
+        xml.required = true
+        html.required = true
     }
 }
